# bdup

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Cargo.toml.in  Makefile
.github/workflows/: cargo-audit.yaml  rust.yaml
public/: _redirects
src/: backup.rs  client.rs  lib.rs  main.rs  manifest.rs  remoteclient.rs
tests/: manifest  manifest.rs
