[package]
name = "bdup"
version = "0.1.0"
authors = ["Karsten Borgwaldt <kb@spambri.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
md5 = "0.7"
clap = "2.33"
