[package]
name = "bdup"
version = "0.1.0"
authors = ["Karsten Borgwaldt <kb@spambri.de>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "burp"
path = "src/lib.rs"

[[bin]]
name = "bdup"
path = "src/bin/bdup.rs"

[dependencies]
flate2 = "1.0"
chrono = "0.4"
log = { version = "0.4", features = ["serde"] }
fern = "0.6"
md5 = "0.7"
threadpool = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"

[dependencies.clap]
version = "2.33"
default-features = false

