[package]
name = "bdup"
version = "0.1.1"
authors = ["Karsten Borgwaldt <kb@spambri.de>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "burp"
path = "src/lib.rs"

[[bin]]
name = "bdup"
path = "src/bin/bdup.rs"
required-features = ["bdup"]

[[bin]]
name = "bverify"
path = "src/bin/bverify.rs"
required-features = ["bverify"]

[features]
default = ["bdup", "bverify"]
bdup = ["cli"]
bverify = ["cli"]
cli = ["fern", "serde_yaml"]

[dependencies]
flate2 = "1"
chrono = "0.4"
log = { version = "0.4", features = ["serde"] }
fern = { version = "0.6", optional = true }
md5 = "0.7"
threadpool = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = { version = "0.8", optional = true }
derive_more = "0.99"

[dependencies.clap]
version = "2.33"
default-features = false

